Change from Travis-CI to GitHub Actions
- Remove .travis.yml and ./travis
- Add .github/workflows/build.yml. This file controls the GitHub
Actions workflow, see
https://docs.github.com/en/actions/migrating-to-github-actions/migrating-from-travis-ci-to-github-actions.
- Rename role from ansible-common to ansible_common
- Add role_name and namespace to galaxy meta/main.yml
- Use option "cgroupns_mode: host" for molecule to use cgroups v2
with docker (see article from Jeff Geerling
https://www.jeffgeerling.com/blog/2022/docker-and-systemd-getting-rid-dreaded-failed-connect-bus-error).

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,25 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include coglinev3.ansible-common"
-      include_role:
-        name: "coglinev3.ansible-common"
-
-    - name: "Log in as User ansible and execute git --version"
-      become: true
-      #become_user: ansible
-      become_user: ansible
-      command: git --version
-      environment:
-        PATH: /usr/local/bin:/bin:/usr/bin
-      changed_when: false
-      args:
-        warn: false # set warn=false to prevent warning
-      register: git_version
-
-    - name: Check if git is installed correctly.
-      assert:
-        that:
-          - git_version.rc == 0
-        fail_msg: "Git not installed properly"
-        success_msg: "Role works fine, {{ git_version.stdout }} installed correctly"
+    - name: "Include coglinev3.ansible_common"
+      ansible.builtin.include_role:
+        name: "coglinev3.ansible_common"
