--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,7 +1,8 @@
 ---
 # file: roles/ansible-common/tests/test.yml
 
-- hosts: all
+- name: Exæmple playbook for using role coglinev3.ansible_common 
+- hosts: localhost
   become: true
   roles:
-    - { role: coglinev3.ansible-common }
+    - { role: coglinev3.ansible_common }
