--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,11 +3,13 @@
 
 galaxy_info:
   author: Cogline.v3
+  role_name: ansible_common
+  namespace: coglinev3
   description: >-
     Set up dependencies for Ansible standard modules and install default software
     packages for each supported Linux distribution.
   license: BSD
-  min_ansible_version: 2.8
+  min_ansible_version: "2.14"
   # github_branch:
   platforms:
     - name: Alpine
@@ -15,8 +17,8 @@ galaxy_info:
         - any
     - name: EL
       versions:
-        - 8
-        - 7
+        - "8"
+        - "7"
     - name: Ubuntu
       versions:
         - trusty
@@ -30,8 +32,8 @@ galaxy_info:
         - buster
     - name: Fedora
       versions:
-        - 32
-        - 33
+        - "34"
+        - "35"
 
   galaxy_tags:
     - ansible
