--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,6 +7,15 @@ platforms:
   - name: instance
     image: docker.io/${MOLECULE_DISTRO:-coglinev3/ansible}:${MOLECULE_DISTRO_VERSION:-centos-7}
     pre_build_image: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    tmpfs:
+      - /tmp
+      - /run
+      - /run/lock
+    cgroupns_mode: host
+    privileged: true
+    command: ${MOLECULE_DISTRO_CMD:-/usr/sbin/init}
 provisioner:
   name: ansible
 verifier:
