--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,8 +21,6 @@ galaxy_info:
         - "7"
     - name: Ubuntu
       versions:
-        - trusty
-        - xenial
         - bionic
         - focal
     - name: Debian
@@ -30,10 +28,10 @@ galaxy_info:
         - jessie
         - stretch
         - buster
-    - name: Fedora
-      versions:
-        - "34"
-        - "35"
+#    - name: Fedora
+#      versions:
+#        - "34"
+#        - "35"
 
   galaxy_tags:
     - ansible
