Add different Alpine versions to supported distros
The following Alpine Linux versions are now supported:
- Alpine Linux 3.14
- Alpine Linux 3.15
- Alpine Linux 3.16
- Alpine Linux 3.17

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,7 +5,7 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: docker.io/${MOLECULE_DISTRO:-coglinev3/ansible}:${MOLECULE_DISTRO_VERSION:-centos-7}
+    image: docker.io/${MOLECULE_DISTRO:-coglinev3/ansible}:${MOLECULE_DISTRO_VERSION:-alpine-3.17}
     pre_build_image: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
