--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,8 @@ jobs:
             distro_cmd: /sbin/init
           - distro_version: 'alpine-3.16'
             distro_cmd: /sbin/init
+          - distro_version: 'alpine-3.17'
+            distro_cmd: /sbin/init
           - distro_version: 'almalinux-8'
           - distro_version: 'debian-10'
             distro_cmd: /bin/systemd
