Add Debian 11 (Bullseye) to supported distros

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -26,9 +26,9 @@ galaxy_info:
         - focal
     - name: Debian
       versions:
-        - jessie
         - stretch
         - buster
+        - bullseye
 #    - name: Fedora
 #      versions:
 #        - "34"
