--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,8 @@ jobs:
           - distro_version: 'centos-7'
           - distro_version: 'almalinux-8'
           - distro_version: 'almalinux-9'
+          - distro_version: 'debian-9'
+            distro_cmd: /bin/systemd
           - distro_version: 'debian-10'
             distro_cmd: /bin/systemd
           - distro_version: 'debian-11'
