--- a/meta/main.yml
+++ b/meta/main.yml
@@ -24,6 +24,7 @@ galaxy_info:
       versions:
         - bionic
         - focal
+        - jammy
     - name: Debian
       versions:
         - stretch
