--- a/meta/main.yml
+++ b/meta/main.yml
@@ -30,10 +30,12 @@ galaxy_info:
         - stretch
         - buster
         - bullseye
-#    - name: Fedora
-#      versions:
-#        - "34"
-#        - "35"
+    - name: Fedora
+      versions:
+        - "34"
+        - "35"
+        - "36"
+        - "37"
 
   galaxy_tags:
     - ansible
