--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
           - distro_version: 'fedora-35'
           - distro_version: 'fedora-36'
           - distro_version: 'fedora-37'
+          - distro_version: 'fedora-38'
           - distro_version: 'ubuntu-18.04'
             distro_cmd: /bin/systemd
           - distro_version: 'ubuntu-20.04'
