Add Amazon Linux 2023 to supported distros
ansible-lint generates a wrong error messgage:
"Error: {'name': 'Amazon Linux 2023'} is not valid under any of the
given schemas"
But 'Amazon Linux 2023' is a valid distribution on Ansible Galaxy.
Therefore, the schema[meta] option has been added to the ansible-lint
skip list.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
             distro_cmd: /sbin/init
           - distro_version: 'alpine-3.17'
             distro_cmd: /sbin/init
+          - distro_version: 'amazonlinux-2023'
           - distro_version: 'centos-7'
           - distro_version: 'almalinux-8'
           - distro_version: 'almalinux-9'
