--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,7 @@ galaxy_info:
   # github_branch:
   platforms:
     - name: Alpine
+    - name: "Amazon Linux 2023"
     - name: EL
       versions:
         - "9"
