Change meta information for Amazon Linux 2023
Ansible Galaxy has removed the distribution "Amazon Linux 2023" from the
supported distributions. Instead, the distribution "Amazon Linux" with
version 2023 is now supported. Therefore, an adaptation of meta/main.yml
became necessary.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,7 +13,9 @@ galaxy_info:
   # github_branch:
   platforms:
     - name: Alpine
-    - name: "Amazon Linux 2023"
+    - name: Amazon Linux
+      versions:
+        - "2023"
     - name: EL
       versions:
         - "9"
